--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
-.App {
-  text-align: center;
+.sky, .earth {
+  position: absolute;
+  left: 0;
+  height: 50vh;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.earth {
+  background:#4dc3ed  repeat-x 0 0 /  100% auto;  
+  width: 100%;
+  bottom: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sky {
+  background: #1d1f2f url("https://gamepress.gg/pokemongo/sites/pokemongo/files/2017-12/Partly-Cloudy.png") repeat-x  100% 100% / auto 100%;
+  top: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.alice {
+  position: absolute;
+  top: 0; left: 40%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+  width: 80%;
+  max-width: 450px; /*height: 783px / 2*/
+  z-index: 99999;
 }
 
-.App-link {
-  color: #61dafb;
+.alice:before {
+    content: " ";
+    display: block;
+    padding-top: 87%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.alice img {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;  
+}
+
+img {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.scenery {
+  width: 100%; height: 50%;
+  position: absolute;
+  bottom: 0; left: 0;
+}
+
+#foreground { z-index: 1 ;}
+#foreground, .background2 {
+  transform: translateX(100%);
+}
+
+#treefore {
+  top: 0; left: 10%;
+}
+
+#pawn {
+  top: 5%; left: 30%
+}
+
+.foreground2, .background2 {
+  transform: translateX(100%);
+}
+
+.pawn {
+  top: -20%; left: 15%;
+}
+
+.pawn2 {
+  top: -10%; left: 80%;    
+}
+
+.treeback {
+  top: -25%; left: 40%    
+}
+
+
+html, body {
+  width: 100%; height: 100%;
+}
+
+.container {
+  width: 100%; height: 100%;
+  overflow: hidden;
+  position: absolute;
 }
